@@ -1,0 +1,18 @@
+/*
+ * ccode.h
+ *
+ * This file is part of rhabarber.
+ *
+ * (c) 2005 by Mikio Braun,        Stefan Harmeling,
+ *             mikio@first.fhg.de  harmeling@gmail.com
+ *                             
+ */
+
+#ifndef CCODE_H
+#define CCODE_H
+
+#include "rha_types.h"
+
+extern any_t ccode(string_t codestring, any_t returntype, any_t argtype);
+
+#endif
