@@ -1,5 +1,9 @@
 2009-01-14  Stefan Harmeling  <harmeling@gmail.com>
 
+	* eval.c (call_ccode_fun): ok, issue solved.  introduced a new
+	basic type called 'ccode_t' (see rha_config.d).  For now the
+	signature is fixed.  Maybe we can use 
+
 	* example.c (wrapped_ccode): try the following to see the current
 	issue:
 	modules.ccode.ccode("result=f(arg1);", int, int)(17)
